--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -25,9 +25,9 @@
                         <label for="localType" class="form-label">Type de locaux *</label>
                         <div>
                             <input type="checkbox" id="bureaux" name="localType" value="bureaux">
-                            <label for="bureaux">Bureaux</label><br>
+                            <label for="bureaux">Bureau</label><br>
                             <input type="checkbox" id="locale" name="localType" value="locale">
-                            <label for="local-pro">Locale professionnel</label><br>
+                            <label for="local-pro">Local professionnel</label><br>
                             <input type="checkbox" id="appartement" name="localType" value="appartement">
                             <label for="appartement">Appartement</label><br>
                             <input type="checkbox" id="maison" name="localType" value="maison">
