--- a/templates/demolition/index.html.twig
+++ b/templates/demolition/index.html.twig
@@ -6,7 +6,7 @@
 <h1 class="text-center demo">Démolition et curage</h1>
 
 <section class="demolition-content">
-        <div class="image-section">
+<div class="image-section">
     <div class="main-image">
         <img src="{{ asset('images/image1.jpg') }}" alt="Main Image" class="img-fluid">
     </div>
@@ -30,7 +30,7 @@
     </div>
 </div>
 
-        <div class="text-content">
+        <div class="text-content order-2 order-md-1 mt-4 ">
             <p>
                 Le service de démolition et de curage constitue une étape cruciale dans la préparation de tout projet de rénovation, qu'il s'agisse d'espaces résidentiels, commerciaux ou industriels. Notre équipe d'experts en démolition intervient avec soin et précision pour démanteler les structures existantes tout en préservant les éléments essentiels qui doivent être conservés.
             </p>
