--- a/templates/revetements/index.html.twig
+++ b/templates/revetements/index.html.twig
@@ -30,7 +30,7 @@
     </div>
 </div>
 
-        <div class="text-content-revetement">
+        <div class="text-content-revetement order-2 order-md-1 mt-4">
             <p>
                 Notre service de pose de sols et de revêtements muraux s’adapte à tous les styles et besoins. Nous proposons un large éventail de solutions pour habiller vos sols, allant du parquet chaleureux et classique, aux carrelages modernes et résistants, en passant par des sols en vinyle pratiques ou encore des finitions en béton ciré pour un aspect contemporain et épuré. Chaque type de sol est posé avec soin, dans le respect des normes, pour garantir une durabilité optimale.
             </p>
