--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path ('contact')}}">Contact</a>
                     </li>
+                    <li class="nav-item">
+                    <a class="btn btn-login-icon" href="{{ path('app_login') }}">
+                        <i class="fas fa-user-circle"></i>
+                    </a>
+                </li>
                 </ul>
             </div>
         </div>
