--- a/templates/expertises/index.html.twig
+++ b/templates/expertises/index.html.twig
@@ -19,7 +19,7 @@
             suscipit nulla dolores fugiat, quos eos accusamus officia possimus nobis nesciunt nihil optio labore 
             recusandae veritatis dolorum veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </p>
-        <button class="btn btn-primary">Demander une étude</button>
+        <button class="btn btn-primary btn-intervention">Demander une étude</button>
     </section>
 
     <!-- Section avant/après -->
