--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,63 +1,51 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscription{% endblock %}
+{% block title %}inscription{% endblock %}
+
 
 {% block body %}
-    <div class="container mt-5">
-        <h1 class="text-center inscription">Créer un compte</h1>
-        
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                {{ form_start(registrationForm, {'attr': {'class': 'form'}}) }}
-                
-                <div class="form-group">
-                    {{ form_label(registrationForm.nom) }}
-                    {{ form_widget(registrationForm.nom, {'attr': {'class': 'form-control'}}) }}
+    <div class="container-inscription mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="form-header">
+                <i class="fas fa-user-circle icon-connexion"></i>
+            </div>
+            <h1 class="text-center-inscription mb-4">Créer un compte</h1>
+            <div class="card-inscription shadow-lg p-4">
+                {{ form_start(registrationForm) }}
+                <div class="form-group mb-3">
+                    {{ form_widget(registrationForm.nom, { 'attr': {'class': 'form-control', 'placeholder': 'Nom'} }) }}
                 </div>
-                
-                <div class="form-group">
-                    {{ form_label(registrationForm.prenom) }}
-                    {{ form_widget(registrationForm.prenom, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-group mb-3">
+                    {{ form_widget(registrationForm.prenom, { 'attr': {'class': 'form-control', 'placeholder': 'Prénom'} }) }}
                 </div>
-                
-                <div class="form-group">
-                    {{ form_label(registrationForm.dateNaissance) }}
-                    {{ form_widget(registrationForm.dateNaissance, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-group mb-3">
+                    {{ form_widget(registrationForm.dateNaissance, { 'attr': {'class': 'form-control', 'placeholder': 'Date de naissance'} }) }}
                 </div>
-                
-                <div class="form-group">
-                    {{ form_label(registrationForm.email) }}
-                    {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-group mb-3">
+                    {{ form_widget(registrationForm.email, { 'attr': {'class': 'form-control', 'placeholder': 'Adresse email'} }) }}
                 </div>
-                
-                <div class="form-group">
-                    {{ form_label(registrationForm.telephone) }}
-                    {{ form_widget(registrationForm.telephone, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-group mb-3">
+                    {{ form_widget(registrationForm.telephone, { 'attr': {'class': 'form-control', 'placeholder': 'Téléphone'} }) }}
                 </div>
-                
-                <div class="form-group">
-                    {{ form_label(registrationForm.adressePostale) }}
-                    {{ form_widget(registrationForm.adressePostale, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-group mb-3">
+                    {{ form_widget(registrationForm.adressePostale, { 'attr': {'class': 'form-control', 'placeholder': 'Adresse postale'} }) }}
                 </div>
-                
-                <div class="form-group">
-                    {{ form_label(registrationForm.password.first) }}
-                    {{ form_widget(registrationForm.password.first, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-group mb-3">
+                    {{ form_widget(registrationForm.password.first, { 'attr': {'class': 'form-control', 'placeholder': 'Mot de passe'} }) }}
                 </div>
-                
-                <div class="form-group">
-                    {{ form_label(registrationForm.password.second) }}
-                    {{ form_widget(registrationForm.password.second, {'attr': {'class': 'form-control'}}) }}
+                <div class="form-group mb-3">
+                    {{ form_widget(registrationForm.password.second, { 'attr': {'class': 'form-control', 'placeholder': 'Confirmer mot de passe'} }) }}
                 </div>
 
-                <button type="submit" class="btn btn-primary mt-3 inscrire">S'inscrire</button>
-                
+                <button type="submit" class="btn inscrire">S'inscrire</button>
                 {{ form_end(registrationForm) }}
-
-                <p class="mt-3">
-                    <a href="{{ path('app_login') }}">Déjà un compte ? Connectez-vous ici.</a>
-                </p>
+            </div>
+            <div class="text-center-connecter mt-3">
+                <a href="{{ path('app_login') }}">Vous avez déjà un compte ? Connectez-vous ici.</a>
             </div>
         </div>
     </div>
+</div>
+
 {% endblock %}
