--- a/templates/admin/show.html.twig
+++ b/templates/admin/show.html.twig
@@ -60,7 +60,7 @@
                                 <p class="card-text">Date d'émission: {{ facture.dateEmission|date('d/m/Y') }}</p>
                                 <p class="card-text">Montant: {{ facture.montant }} €</p>
                                 {% if facture.fichier %}
-                                    <a href="{{ asset('uploads/factures/' ~ facture.fichier) }}" class="btn btn-primary">Télécharger</a>
+                                    <a href="{{ asset('uploads/factures/' ~ facture.fichier) }}" class="btn btn-primary" target="_blank">Télécharger</a>
                                 {% endif %}
                                 <a href="{{ path('view_facture', {'userId': user.id, 'factureId': facture.id}) }}" class="btn btn-info">Voir</a>
                                 <a href="{{ path('edit_facture', {'userId': user.id, 'factureId': facture.id}) }}" class="btn btn-warning">Modifier</a>
@@ -111,7 +111,7 @@
                                 <p class="card-text">Date de création: {{ devis.dateCreation|date('d/m/Y') }}</p>
                                 <p class="card-text">Montant: {{ devis.montant }} €</p>
                                 {% if devis.fichier %}
-                                    <a href="{{ asset('uploads/devis/' ~ devis.fichier) }}" class="btn btn-primary">Télécharger</a>
+                                    <a href="{{ asset('uploads/devis/' ~ devis.fichier) }}" class="btn btn-primary" target="_blank">Télécharger</a>
                                 {% endif %}
                                 <a href="{{ path('view_devis', {'userId': user.id, 'devisId': devis.id}) }}" class="btn btn-info">Voir</a>
                                 <a href="{{ path('edit_devis', {'userId': user.id, 'devisId': devis.id}) }}" class="btn btn-warning">Modifier</a>
