--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -97,7 +97,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
                         <a href="{{ path('app_demolition') }}">
-                            <img src="{{ asset('images/image3.jpg') }}" alt="Démolition et curage" class="img-fluid rounded">
+                            <img src="{{ asset('images/demolition.jpg') }}" alt="Démolition et curage" class="img-fluid rounded">
                         </a>
                         <p class="mt-2">Démolition et curage</p>
                         <p class="card-text">
@@ -109,7 +109,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
                         <a href="{{ path('app_maconnerie') }}">
-                            <img src="{{ asset('images/image3.jpg') }}" alt="Maçonnerie" class="img-fluid rounded">
+                            <img src="{{ asset('images/maconnerie.jpg') }}" alt="Maçonnerie" class="img-fluid rounded">
                         </a>
                         <p class="mt-2">Maçonnerie</p>
                         <p class="card-text">
@@ -122,7 +122,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
                         <a href="{{ path('app_revetements') }}">
-                            <img src="{{ asset('images/image3.jpg') }}" alt="Sols et revêtements muraux" class="img-fluid rounded">
+                            <img src="{{ asset('images/revetement.jpg') }}" alt="Sols et revêtements muraux" class="img-fluid rounded">
                         </a>
                         <p class="mt-2">Sols et revêtements muraux</p>
                         <p class="card-text">
@@ -139,7 +139,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
                         <a href="{{ path('app_peinture') }}">
-                            <img src="{{ asset('images/image3.jpg') }}" alt="Démolition et curage" class="img-fluid rounded">
+                            <img src="{{ asset('images/peinture.jpg') }}" alt="Démolition et curage" class="img-fluid rounded">
                         </a>
                         <p class="mt-2">Peinture</p>
                         <p class="card-text">
@@ -151,7 +151,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
                         <a href="{{ path('app_cloisons') }}">
-                            <img src="{{ asset('images/image3.jpg') }}" alt="Maçonnerie" class="img-fluid rounded">
+                            <img src="{{ asset('images/cloison.jpg') }}" alt="cloisons" class="img-fluid rounded">
                         </a>
                         <p class="mt-2">Cloisons mobiles et plafonds</p>
                         <p class="card-text">
@@ -164,7 +164,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
                         <a href="{{ path('app_isolation') }}">
-                            <img src="{{ asset('images/image3.jpg') }}" alt="Sols et revêtements muraux" class="img-fluid rounded">
+                            <img src="{{ asset('images/isolation.jpg') }}" alt="Sols et revêtements muraux" class="img-fluid rounded">
                         </a>
                         <p class="mt-2">Solutions acoustique</p>
                         <p class="card-text">
@@ -267,7 +267,7 @@
                     </div>
                 </div>
             </div>
-            <p><a href="#" class="realisations"> DECOUVREZ NOS AUTRES REALISATIONS</a></p>
+            <p><a href="{{path('app_realisations')}}" class="realisations"> DECOUVREZ NOS AUTRES REALISATIONS</a></p>
         </div>
     </section>
     <!-- Nouvelle section - Pourquoi s'inscrire -->
