--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -89,6 +89,7 @@ body {
     margin-left: auto;
     margin-right: 100px;
     margin-top: 50px;
+    /*box-shadow: 0px 4px 8px rgba(1, 0, 0, 0.9);*/
 }
 
 /* Boutons demande d'etude*/
@@ -213,7 +214,7 @@ body {
 
 .service-item img {
     width: 100%;
-    height: auto;
+    height: 250px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
